# tyycode

./: .gitignore  CLAUDE.md  README.md  architecture.md  pyproject.toml  rules.md  tech-stack.md
api-docs/: openapi.yaml
src/tyycode/: __init__.py  __main__.py  cli.py
src/tyycode/core/: agent.py  config.py  context.py  llm.py
src/tyycode/tools/: __init__.py  base.py  file_ops.py  search.py  shell.py
src/tyycode/ui/: display.py  repl.py
tests/: test_config.py  test_context.py  test_tools.py
